--- 732 Make the cluster element type maps order-stable
Map.of randomises its iteration order per JVM run, so any such map serialised
into a component definition snapshot reshuffles its keys on every regeneration
-- churn in the diff that says nothing, and a stream of snapshot updates nobody
can read. JsonFileAssert compares objects order-insensitively and cannot catch
the regression either way.

Six sites across four files: the AI agent's
getClusterElementClusterElementTypes first, then VectorStoreComponentDefinition's
action and cluster-element maps, JdbcChatMemoryComponentDefinition's, and the
KnowledgeBase component handler. LinkedHashMap pins each to declaration order.
The regenerated snapshots differ in key order only.